升级：AI优化项目架构设计